refactored downloader solving sse issue